# ow_nn

./: .gitignore  CMakeLists.txt  CMakePresets.json  FIXES_SUMMARY.md  MEMORY_FIX_SUMMARY.md  MEMORY_OPTIMIZATION.md  VECTOR_SLICE_USAGE.md  benchmark_CMakeLists.txt  benchmark_matmul.cpp  debug.md  input.txt  main.cpp  run_log_scalar_v.txt
include/: common.h  ow_nn.h  sampler.h  tokenizer.h  transformer.h
src/: CMakeLists.txt  backend_qwen3vl.hpp  cgraph.hpp  context.hpp  image_io.hpp  lazy_safetensors_loader.hpp  logging.hpp  memory_optimizer.hpp  ops.hpp  safetensors_loader.hpp  sampler.cpp  stb_image_impl.cpp  tensor.hpp  thread_pool.hpp  tokenizer.cpp  transformer.cpp  utils.hpp
tests/: Attention.py  hf_compare_ops.py  modeling_qwen3_vl.py  ops_tests.cpp  qwen3vl.py  running_with_qwen_mlx.py
tests/data/activations/: act_input.tensor  gelu_exact.tensor  gelu_tanh.tensor  relu.tensor  sigmoid.tensor  silu.tensor  softmax.tensor  tanh.tensor
tests/data/attention/: attn_Wk.tensor  attn_Wo.tensor  attn_Wq.tensor  attn_Wv.tensor  attn_X.tensor  attn_Y.tensor  attn_bk.tensor  attn_bo.tensor  attn_bq.tensor  attn_bv.tensor  attn_cos.tensor  attn_pos_ids.tensor  attn_sin.tensor
tests/data/linear/: linear_W.tensor  linear_X.tensor  linear_Y.tensor  linear_b.tensor
tests/data/rmsnorm/: rms_X.tensor  rms_Y.tensor  rms_weight.tensor
tests/data/rope/: rope_cos.tensor  rope_pos_ids.tensor  rope_sin.tensor
